[gd_scene load_steps=27 format=3 uid="uid://bugwiltjmg52c"]

[ext_resource type="Script" uid="uid://clhircl18kdhh" path="res://badguys/badguy.gd" id="1_qpwri"]
[ext_resource type="Script" uid="uid://bund4vdf4u4yo" path="res://common/components/health_component.gd" id="3_becgi"]
[ext_resource type="Texture2D" uid="uid://dq0usfrqgg3dm" path="res://badguys/images/energy-alien/energy-alien-attack-0.png" id="3_nvatm"]
[ext_resource type="Texture2D" uid="uid://cl0jur7fhtqc7" path="res://badguys/images/energy-alien/energy-alien-attack-1.png" id="4_blnm1"]
[ext_resource type="Texture2D" uid="uid://cv4nbqb6fhiq2" path="res://badguys/images/energy-alien/energy-alien-attack-2.png" id="5_5whpb"]
[ext_resource type="PackedScene" uid="uid://ccha1k3c1jk0d" path="res://badguys/bullet/badguy_bullet.tscn" id="5_l7rji"]
[ext_resource type="Texture2D" uid="uid://cgieinlfmu42l" path="res://badguys/images/energy-alien/energy-alien-attack-3.png" id="6_8cxud"]
[ext_resource type="Texture2D" uid="uid://c75aa4etba1x8" path="res://badguys/images/energy-alien/energy-alien-walk-0.png" id="6_i3k53"]
[ext_resource type="Texture2D" uid="uid://w5oydjqgxs43" path="res://badguys/images/energy-alien/energy-alien-walk-1.png" id="7_6rxn4"]
[ext_resource type="Texture2D" uid="uid://ctdnxye4y5ikp" path="res://badguys/images/energy-alien/energy-alien-walk-2.png" id="8_tbdhc"]
[ext_resource type="Script" uid="uid://cuiwxj3wnoqag" path="res://common/components/navigation_component.gd" id="9_e88ha"]
[ext_resource type="Texture2D" uid="uid://d4hxxmkn4spf8" path="res://badguys/images/energy-alien/energy-alien-walk-3.png" id="9_mldws"]
[ext_resource type="Script" uid="uid://d3w1w02heo866" path="res://common/components/state/fsm_component.gd" id="9_x3sma"]
[ext_resource type="Script" uid="uid://c3mha4eajluii" path="res://badguys/states/badguy_idle_state.gd" id="10_e88ha"]
[ext_resource type="Script" uid="uid://cdsndtjjy64gx" path="res://badguys/states/badguy_chase_state.gd" id="11_f867n"]
[ext_resource type="Texture2D" uid="uid://d244elgcdnvp3" path="res://badguys/images/energy-alien/energy-alien-death-0.png" id="11_yr8fq"]
[ext_resource type="Texture2D" uid="uid://dbr3ncio0jube" path="res://badguys/images/energy-alien/energy-alien-death-1.png" id="12_4wvth"]
[ext_resource type="Script" uid="uid://bbx03qgt7jwev" path="res://badguys/states/badguy_attack_state.gd" id="12_yp0or"]
[ext_resource type="Texture2D" uid="uid://s70osmfkraj2" path="res://badguys/images/energy-alien/energy-alien-death-2.png" id="13_f7vh7"]
[ext_resource type="Script" uid="uid://dmrpfrb334jim" path="res://badguys/states/badguy_hurt_state.gd" id="13_lnx2x"]
[ext_resource type="Script" uid="uid://mgr8rmq8nlia" path="res://badguys/states/badguy_death_state.gd" id="14_025bg"]
[ext_resource type="Script" uid="uid://tb00nu6v8wu2" path="res://common/components/ranged_attack_component.gd" id="15_nvatm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_apgvv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_221m0"]
radius = 0.3

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_225bv"]
points = PackedVector3Array(0, 0, 0, 3, 0, 9, -3, 0, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_ngquo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nvatm")
}, {
"duration": 1.0,
"texture": ExtResource("4_blnm1")
}, {
"duration": 1.0,
"texture": ExtResource("5_5whpb")
}, {
"duration": 1.0,
"texture": ExtResource("6_8cxud")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_i3k53")
}, {
"duration": 1.0,
"texture": ExtResource("7_6rxn4")
}, {
"duration": 1.0,
"texture": ExtResource("8_tbdhc")
}, {
"duration": 1.0,
"texture": ExtResource("9_mldws")
}],
"loop": true,
"name": &"chase",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_yr8fq")
}, {
"duration": 1.0,
"texture": ExtResource("12_4wvth")
}, {
"duration": 1.0,
"texture": ExtResource("13_f7vh7")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_yr8fq")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_i3k53")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="RangedBadguy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 23
script = ExtResource("1_qpwri")
attack_damage = 15

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_becgi")
MAX_HEALTH = 5
metadata/_custom_type_script = "uid://bund4vdf4u4yo"

[node name="RangedAttackComponent" type="Node" parent="."]
script = ExtResource("15_nvatm")
bullet_template = ExtResource("5_l7rji")
metadata/_custom_type_script = "uid://tb00nu6v8wu2"

[node name="NavigationComponent" type="Node" parent="." node_paths=PackedStringArray("navigation_agent")]
unique_name_in_owner = true
script = ExtResource("9_e88ha")
navigation_agent = NodePath("../NavigationAgent3D")
metadata/_custom_type_script = "uid://cuiwxj3wnoqag"

[node name="FSMComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_x3sma")
metadata/_custom_type_script = "uid://d3w1w02heo866"

[node name="BadguyIdleState" type="Node" parent="FSMComponent"]
script = ExtResource("10_e88ha")
metadata/_custom_type_script = "uid://c3mha4eajluii"

[node name="BadguyChaseState" type="Node" parent="FSMComponent" node_paths=PackedStringArray("navigation_component")]
script = ExtResource("11_f867n")
navigation_component = NodePath("../../NavigationComponent")
attack_distance = 8.0
metadata/_custom_type_script = "uid://cdsndtjjy64gx"

[node name="BadguyAttackState" type="Node" parent="FSMComponent" node_paths=PackedStringArray("attack_component")]
script = ExtResource("12_yp0or")
attack_component = NodePath("../../RangedAttackComponent")
metadata/_custom_type_script = "uid://bbx03qgt7jwev"

[node name="BadguyHurtState" type="Node" parent="FSMComponent"]
script = ExtResource("13_lnx2x")
hit_stun_length = 0.25
metadata/_custom_type_script = "uid://dmrpfrb334jim"

[node name="BadguyDeathState" type="Node" parent="FSMComponent"]
script = ExtResource("14_025bg")
metadata/_custom_type_script = "uid://mgr8rmq8nlia"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_apgvv")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true

[node name="PlayerDamageArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDamageArea"]
shape = SubResource("SphereShape3D_221m0")

[node name="DetectionArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("ConvexPolygonShape3D_225bv")
debug_color = Color(1, 0, 1, 1)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
pixel_size = 0.025
billboard = 1
shaded = true
double_sided = false
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_ngquo")
animation = &"attack"
